# stt-app

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  docx.rs  error.rs  lib.rs  main.rs  runner.rs  sarvam.rs  state.rs
src/lib/: api.ts  events.ts  langs.ts  stores.ts
src/lib/components/: Spinner.svelte  StatusBadge.svelte
src/lib/screens/: History.svelte  ImportRun.svelte  RunDetail.svelte  Settings.svelte
src/routes/: +page.svelte
