[package]
name = "sarvam-stt-app"
version = "0.0.0"
description = "Sarvam batch Speech-to-Text desktop app"
authors = ["Richik Chanda"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sarvam_stt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
docx-rs = "0.4.20"
sha2 = "0.10"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
tokio-util = "0.7.18"
futures-util = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Faster builds: emit only line-table debug info (keeps line numbers in
# backtraces) so there's far less debuginfo to generate and link. Works on
# stable, so CI benefits too.
[profile.dev]
debug = "line-tables-only"
